--- a/about.html
+++ b/about.html
@@ -32,11 +32,20 @@
       <!-- ***** Nav ***** -->
       <div class="header_nav">
         <ul class="navLinks">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li class="hasChildmenu"><a href="#">Solutions</a></li>
-          <li><a href="#">Clients</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li class="hasChildmenu">
+            <a href="javascript:void(0);" class="c-link">Solutions <i class="icon kg kg-double-right"></i></a>
+            <div class="subMenu">
+              <button class="subMenu_back">
+                <i class="icon kg kg-double-left"></i>Back</button>
+              <a class="menuLink" href="./leadership.html">Leadership Mastery</a>
+              <a class="menuLink" href="./team.html">Team Mastery</a>
+              <a class="menuLink" href="./organizational.html">Organizational Mastery</a>
+            </div>
+          </li>
+          <li><a href="./clients.html">Clients</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
         <button class="js-closeNav" onclick="closeMenu()">
           <i class="icon kg kg-android-close"></i>
@@ -108,39 +117,6 @@
         </div>
       </div>
     </div>
-    <!-- ****** Video Block End ******* -->
-
-    <!-- ****** Video Block ******* -->
-    <!-- <div class="c-videoBlock type2">
-      <div class="sectHeading">We Are</div>
-      <div class="c-dividerBlock">
-        <div class="divider">
-          <span class="staticText"
-            ><strong>We are a community of professionals.</strong> We demand of
-            ourselves what we ask of others, and have deep experience in
-            developing leaders and high performing teams. We believe in the
-            application of authentic communication practices that help others
-            achieve their highest goals. We understand behavior and its
-            connection to obstructing and producing results.</span
-          >
-        </div>
-        <div class="divider">
-          <span class="staticText"
-            ><strong>We are business partners.</strong> We are advisers. We are
-            facilitators. We care passionately about the commitments we make,
-            and those we ask of others. We focus on things that make a
-            difference, and that would not happen without us.</span
-          >
-        </div>
-        <div class="divider">
-          <span class="staticText"
-            ><strong>We are collaborators.</strong> We help organizations and
-            Leaders reinvent themselves from the inside out, and believe it is
-            strategic imperative to do so.</span
-          >
-        </div>
-      </div>
-    </div> -->
     <!-- ****** Video Block End ******* -->
 
     <!-- ****** Image Block ******* -->
