--- a/leadership.html
+++ b/leadership.html
@@ -32,11 +32,20 @@
       <!-- ***** Nav ***** -->
       <div class="header_nav">
         <ul class="navLinks">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li class="hasChildmenu"><a href="#">Solutions</a></li>
-          <li><a href="#">Clients</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li class="hasChildmenu">
+            <a href="javascript:void(0);" class="c-link">Solutions <i class="icon kg kg-double-right"></i></a>
+            <div class="subMenu">
+              <button class="subMenu_back">
+                <i class="icon kg kg-double-left"></i>Back</button>
+              <a class="menuLink" href="./leadership.html">Leadership Mastery</a>
+              <a class="menuLink" href="./team.html">Team Mastery</a>
+              <a class="menuLink" href="./organizational.html">Organizational Mastery</a>
+            </div>
+          </li>
+          <li><a href="./clients.html">Clients</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
         <button class="js-closeNav" onclick="closeMenu()">
           <i class="icon kg kg-android-close"></i>
@@ -47,7 +56,7 @@
     <!-- ****** Header End ******* -->
 
     <!-- ****** Image Block ******* -->
-    <div class="c-imgBlock sm mastery-leader">
+    <div class="c-imgBlock xs mastery-leader">
       <div class="infoBlock">
         <div class="text-center">
           <h1 class="infoBlockText">
@@ -77,7 +86,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">GET IN TOUCH</div>
+            <h2 class="sectHeading sm text-left">GET IN TOUCH</h2>
             <span class="infoStaticText dark">Leadership is a privilege. It is the opportunity to improve the quality of life for others while achieving enterprise goals. Seizing that opportunity is not always a conscious choice people make when they step into leadership positions. It can sneak up on people while busy using their expertise to set goals, plan, and solve the hard problems required to achieve results.</span>
             <span class="infoStaticText dark">At its best, the leadership journey is a process of awakening.  Great leaders are grounded in knowledge of their deeply held beliefs, values, strengths and weaknesses. Being anchored in their interior landscape provides a true north, the compass needed to set direction and lead others through ambiguity and change. Great leaders are genuinely interested in who the other person is, and how to bring out the best in each individual.</span>
           </div>
@@ -85,7 +94,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">OUR BELIEFS ABOUT LEADERSHIP</div>
+            <h2 class="sectHeading sm text-left">OUR BELIEFS ABOUT LEADERSHIP</h2>
             <div class="infoListing">
               <ul>
                 <li>Self-awareness allows a leader to show up with authenticity. Knowing themselves, they can act congruently with their true values.</li>
@@ -98,7 +107,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">WHY WE ARE DIFFERENT</div>
+            <h2 class="sectHeading sm text-left">WHY WE ARE DIFFERENT</h2>
             <span class="infoStaticText dark m34-btm">The leadership journey is the hero’s journey. It has predictable stages and challenges. We offer support on the path to one’s highest potential and purpose in the context of enterprise success. </span>
             <div class="clearfix text-center">
               <span class="infoStaticText italic">“Jocelyn has made so many ‘Type A’ executives into true believers.”</span>
@@ -109,7 +118,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">SAMPLE OF SERVICES:</div>
+            <h2 class="sectHeading sm text-left">SAMPLE OF SERVICES:</h2>
             <div class="infoListing">
               <ul>
                 <li>Executive Coaching</li>
@@ -124,7 +133,7 @@
         <div class="col-sm-5 col-12">
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">SOLUTIONS</div>
+            <h2 class="sectHeading sm text-left">SOLUTIONS</h2>
             <div class="infoListing">
               <ul>
                 <li><a href="#" class="link">Leadership Mastery</a></li>
@@ -137,7 +146,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock videoBlock">
-            <iframe src="https://player.vimeo.com/video/201621747?wmode=opaque&amp;api=1&amp;autoplay=1"
+            <iframe src="https://player.vimeo.com/video/201621747?wmode=opaque&amp;api=1&amp;autoplay=0"
             width="100%"
             height="360"
             frameborder="0"
@@ -146,6 +155,7 @@
             allowfullscreen=""
             id="yui_3_17_2_1_1579617429711_74">
           </iframe>
+          <p class="watchVideoLabel">Click to watch video</p>
           </div>
           <!-- ***** Info Section End ***** -->
 
