--- a/organizational.html
+++ b/organizational.html
@@ -32,11 +32,20 @@
       <!-- ***** Nav ***** -->
       <div class="header_nav">
         <ul class="navLinks">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li class="hasChildmenu"><a href="#">Solutions</a></li>
-          <li><a href="#">Clients</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li class="hasChildmenu">
+            <a href="javascript:void(0);" class="c-link">Solutions <i class="icon kg kg-double-right"></i></a>
+            <div class="subMenu">
+              <button class="subMenu_back">
+                <i class="icon kg kg-double-left"></i>Back</button>
+              <a class="menuLink" href="./leadership.html">Leadership Mastery</a>
+              <a class="menuLink" href="./team.html">Team Mastery</a>
+              <a class="menuLink" href="./organizational.html">Organizational Mastery</a>
+            </div>
+          </li>
+          <li><a href="./clients.html">Clients</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
         <button class="js-closeNav" onclick="closeMenu()">
           <i class="icon kg kg-android-close"></i>
@@ -47,7 +56,7 @@
     <!-- ****** Header End ******* -->
 
     <!-- ****** Image Block ******* -->
-    <div class="c-imgBlock sm mastery-org">
+    <div class="c-imgBlock xs mastery-org">
       <div class="infoBlock">
         <div class="text-center">
           <h1 class="infoBlockText">
@@ -76,7 +85,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">PERFORMANCE AND MOTIVATION</div>
+            <h2 class="sectHeading sm text-left">PERFORMANCE AND MOTIVATION</h2>
             <span class="infoStaticText dark">Success is measured by results. To get results, managers focus on Performance: defining, measuring, and rewarding it. Performance management becomes the backbone for keeping people connected and productive. </span>
             <span class="infoStaticText dark">While necessary for setting direction and tracking progress, performance is actually a lag indicator of success. The lead indicator is Motivation.</span>
             <span class="infoStaticText dark">Think of Motivation as collective energy; the fuel tank that powers the performance management engine. Less tangible, motivation is difficult to quantify and prioritize. It originates in each person’s drive to achieve something important to him or her. Leaders need to understand what their people value and aspire to in order to tap their potential to build energy in the system. </span>
@@ -86,7 +95,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">WHY WE ARE DIFFERENT</div>
+            <h2 class="sectHeading sm text-left">WHY WE ARE DIFFERENT</h2>
             <span class="infoStaticText dark">Defining an organization’s potential involves more than structured analysis and scientific data gathering. It also involves tapping into the deeper reservoirs available within people and understanding what is in the way. In addition to studying performance factors, our assessment includes listening to the heartbeat of the system. Indicators of health are evident in non-tangibles like the quality of relationships, the quality of agreements people make with each other, and the quality of purpose that inspires larger-than-life accomplishments. </span>
             <span class="infoStaticText dark">Examining the whole system, we work collaboratively to shift the balance between driving performance and nurturing motivation. The result is a revival of dormant talent that naturally achieves ‘faster, better, cheaper.’</span>
             <div class="clearfix text-center">
@@ -99,7 +108,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">SAMPLE OF SERVICES:</div>
+            <h2 class="sectHeading sm text-left">SAMPLE OF SERVICES:</h2>
             <div class="infoListing">
               <ul>
                 <li>Design of Organization’s Core Values</li>
@@ -114,7 +123,7 @@
         <div class="col-sm-5 col-12">
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">SOLUTIONS</div>
+            <h2 class="sectHeading sm text-left">SOLUTIONS</h2>
             <div class="infoListing">
               <ul>
                 <li><a href="#" class="link">Leadership Mastery</a></li>
@@ -136,6 +145,7 @@
             allowfullscreen=""
             id="yui_3_17_2_1_1579617429711_74">
           </iframe>
+          <p class="watchVideoLabel">Click to watch video</p>
           </div>
           <!-- ***** Info Section End ***** -->
 
