--- a/team.html
+++ b/team.html
@@ -32,11 +32,20 @@
       <!-- ***** Nav ***** -->
       <div class="header_nav">
         <ul class="navLinks">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li class="hasChildmenu"><a href="#">Solutions</a></li>
-          <li><a href="#">Clients</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li class="hasChildmenu">
+            <a href="javascript:void(0);" class="c-link">Solutions <i class="icon kg kg-double-right"></i></a>
+            <div class="subMenu">
+              <button class="subMenu_back">
+                <i class="icon kg kg-double-left"></i>Back</button>
+              <a class="menuLink" href="./leadership.html">Leadership Mastery</a>
+              <a class="menuLink" href="./team.html">Team Mastery</a>
+              <a class="menuLink" href="./organizational.html">Organizational Mastery</a>
+            </div>
+          </li>
+          <li><a href="./clients.html">Clients</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
         <button class="js-closeNav" onclick="closeMenu()">
           <i class="icon kg kg-android-close"></i>
@@ -47,7 +56,7 @@
     <!-- ****** Header End ******* -->
 
     <!-- ****** Image Block ******* -->
-    <div class="c-imgBlock sm mastery-team">
+    <div class="c-imgBlock xs mastery-team">
       <div class="infoBlock">
         <div class="text-center">
           <h1 class="infoBlockText">
@@ -77,7 +86,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">TRUST HAS ECONOMIC VALUE</div>
+            <h2 class="sectHeading sm text-left">TRUST HAS ECONOMIC VALUE</h2>
             <span class="infoStaticText dark">Strong teams make strong companies. A healthy organizational culture — along with stellar products, strategic thinking and execution — drives exceptional results. That is because sustained success depends as much on learning and profiting from mistakes as on marketing, sales or finance. Teams learn effectively when leaders and members hold themselves accountable, analyze performance honestly and speak the truth without fear. </span>
             <span class="infoStaticText dark">On the flip side, companies can hit a wall when there is a system-wide failure of trust. When team leaders cannot hear or use diverse perspectives to find innovative solutions, unspoken conflict goes underground:  Back channeling and finger-pointing create silos, breakdowns in collaboration and stagnant growth. Turnaround requires a hard look at company culture.</span>
           </div>
@@ -85,14 +94,14 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">GREAT TEAMS ESTABLISH TRUST EARLY</div>
+            <h2 class="sectHeading sm text-left">GREAT TEAMS ESTABLISH TRUST EARLY</h2>
             <span class="infoStaticText dark">Building a baseline of trust and openness fosters direct communication, efficiency, and the leveraging of individual strengths. A virtuous cycle of respect, truth-telling and explicit agreements allows teams to stay nimble, aligned and focused as they navigate the inevitable challenges. </span>
           </div>
           <!-- ***** Info Section End ***** -->
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">OUR APPROACH</div>
+            <h2 class="sectHeading sm text-left">OUR APPROACH</h2>
             <span class="infoStaticText dark">Developing and maintaining high performance teams does not have to mean ropes courses and mandatory social gatherings. A simple, 4-step process — the Trust Workout — can fast-track organizational health.</span>
             <span class="infoStaticText dark">Like going to the gym, with regular practice, the Trust Workout builds lasting strength. When leaders show that they understand and appreciate their team members, have their backs and speak the truth, employees quickly get the message. They feel motivated and empowered.  They work in common cause, pivot swiftly from mistakes, and find reasons to succeed.</span>
           </div>
@@ -100,7 +109,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">WHY WE ARE DIFFERENT</div>
+            <h2 class="sectHeading sm text-left">WHY WE ARE DIFFERENT</h2>
             <span class="infoStaticText dark m34-btm">Great products, focused strategy and market demand are necessary, but insufficient conditions of success. Even the right talent is not enough. Our approach to winning involves cultivating strong leaders who bring out the best in their teams. With trust as the foundation, the whole far exceeds the sum of the parts.</span>
             <div class="clearfix text-center">
               <span class="infoStaticText italic">“Our mission is to unlock value in our teams by creating belief and inspiration in its leaders. Jocelyn continues to touch all of these things with passion and a long-lasting effect.”</span>
@@ -111,7 +120,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">SAMPLE OF SERVICES:</div>
+            <h2 class="sectHeading sm text-left">SAMPLE OF SERVICES:</h2>
             <div class="infoListing">
               <ul>
                 <li>Team Building: The Trust Workout</li>
@@ -126,7 +135,7 @@
         <div class="col-sm-5 col-12">
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <div class="sectHeading sm text-left">SOLUTIONS</div>
+            <h2 class="sectHeading sm text-left">SOLUTIONS</h2>
             <div class="infoListing">
               <ul>
                 <li><a href="#" class="link">Leadership Mastery</a></li>
@@ -139,7 +148,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock videoBlock">
-            <iframe src="https://player.vimeo.com/video/201621747?wmode=opaque&amp;api=1&amp;autoplay=1"
+            <iframe src="https://player.vimeo.com/video/201621747?wmode=opaque&amp;api=1&amp;autoplay=0"
             width="100%"
             height="360"
             frameborder="0"
@@ -148,6 +157,7 @@
             allowfullscreen=""
             id="yui_3_17_2_1_1579617429711_74">
           </iframe>
+          <p class="watchVideoLabel">Click to watch video</p>
           </div>
           <!-- ***** Info Section End ***** -->
 
