--- a/clients.html
+++ b/clients.html
@@ -32,11 +32,20 @@
       <!-- ***** Nav ***** -->
       <div class="header_nav">
         <ul class="navLinks">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li class="hasChildmenu"><a href="#">Solutions</a></li>
-          <li><a href="#">Clients</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li class="hasChildmenu">
+            <a href="javascript:void(0);" class="c-link">Solutions <i class="icon kg kg-double-right"></i></a>
+            <div class="subMenu">
+              <button class="subMenu_back">
+                <i class="icon kg kg-double-left"></i>Back</button>
+              <a class="menuLink" href="./leadership.html">Leadership Mastery</a>
+              <a class="menuLink" href="./team.html">Team Mastery</a>
+              <a class="menuLink" href="./organizational.html">Organizational Mastery</a>
+            </div>
+          </li>
+          <li><a href="./clients.html">Clients</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
         <button class="js-closeNav" onclick="closeMenu()">
           <i class="icon kg kg-android-close"></i>
@@ -47,7 +56,7 @@
     <!-- ****** Header End ******* -->
 
     <!-- ****** Image Block ******* -->
-    <div class="c-imgBlock sm i3">
+    <div class="c-imgBlock sm i5">
       <div class="infoBlock">
         <div class="text-center">
           <h1 class="infoBlockText">
