--- a/clients.html
+++ b/clients.html
@@ -68,76 +68,127 @@
     <!-- ****** Image Block ******* -->
 
     <!-- ****** Info Block ******* -->
-    <div class="c-bodyContainer">
+    <div class="c-bodyContainer c-testimon">
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-sm-12">
 
-      <div class="c-testimon">
-        <div class="c-dividerBlock half">
-          <div class="divBlock">
-            <blockquote class="blockquote">
-              <span>“</span>The Kung Group has been extremely helpful with the
-              Equinix Executive leadership team in several areas including team
-              development, collaboration and dealing with the complexities of
-              scaling to a multi-billion dollar global enterprise. Jocelyn’s
-              keen insights and objective views into our individual and team
-              leadership dynamics have helped us build more trust and mutual
-              respect with each other. This has resulted in a much sharper
-              operating cadence and a streamlined execution of our global
-              strategy.<span>”</span>
-            </blockquote>
-            <figcaption class="source">
-              — Stephen Smith, CEO &amp; President Equinix
-            </figcaption>
+          <div class="row">
+
+            <div class="col-sm-6">
+              <div class="divBlock">
+                <blockquote class="blockquote">
+                  “At Juniper the culture is a major reason for our success and why
+                  many people say it is the best place they have ever worked.
+                  Jocelyn Kung has been a major factor over many years in making
+                  this possible. Her contributions have been vast and far-reaching
+                  in the successful evolution of our people and practices as we grew
+                  from a smaller company to a multi-billion dollar, complex
+                  organization. For me, the executive team and many others across
+                  the company Jocelyn’s knowledge, instincts, and experience have
+                  been invaluable.”
+                </blockquote>
+                <figcaption class="source">
+                  — Scott Kriens, Chairman and former CEO and President Juniper
+                  Networks
+                </figcaption>
+              </div>
+
+              <div class="divBlock">
+                <blockquote class="blockquote">
+                  “At Juniper the culture is a major reason for our success and why
+                  many people say it is the best place they have ever worked.
+                  Jocelyn Kung has been a major factor over many years in making
+                  this possible. Her contributions have been vast and far-reaching
+                  in the successful evolution of our people and practices as we grew
+                  from a smaller company to a multi-billion dollar, complex
+                  organization. For me, the executive team and many others across
+                  the company Jocelyn’s knowledge, instincts, and experience have
+                  been invaluable.”
+                </blockquote>
+                <figcaption class="source">
+                  — Scott Kriens, Chairman and former CEO and President Juniper
+                  Networks
+                </figcaption>
+              </div>
+
+              <div class="divBlock">
+                <blockquote class="blockquote">
+                  “At Juniper the culture is a major reason for our success and why
+                  many people say it is the best place they have ever worked.
+                  Jocelyn Kung has been a major factor over many years in making
+                  this possible. Her contributions have been vast and far-reaching
+                  in the successful evolution of our people and practices as we grew
+                  from a smaller company to a multi-billion dollar, complex
+                  organization. For me, the executive team and many others across
+                  the company Jocelyn’s knowledge, instincts, and experience have
+                  been invaluable.”
+                </blockquote>
+                <figcaption class="source">
+                  — Scott Kriens, Chairman and former CEO and President Juniper
+                  Networks
+                </figcaption>
+              </div>
+            </div>
+
+            <div class="col-sm-6">
+              <div class="divBlock">
+                <blockquote class="blockquote">
+                  “At Juniper the culture is a major reason for our success and why
+                  many people say it is the best place they have ever worked.
+                  Jocelyn Kung has been a major factor over many years in making
+                  this possible. Her contributions have been vast and far-reaching
+                  in the successful evolution of our people and practices as we grew
+                  from a smaller company to a multi-billion dollar, complex
+                  organization. For me, the executive team and many others across
+                  the company Jocelyn’s knowledge, instincts, and experience have
+                  been invaluable.”
+                </blockquote>
+                <figcaption class="source">
+                  — Scott Kriens, Chairman and former CEO and President Juniper
+                  Networks
+                </figcaption>
+              </div>
+
+              <div class="divBlock">
+                <blockquote class="blockquote">
+                  “At Juniper the culture is a major reason for our success and why
+                  many people say it is the best place they have ever worked.
+                  Jocelyn Kung has been a major factor over many years in making
+                  this possible. Her contributions have been vast and far-reaching
+                  in the successful evolution of our people and practices as we grew
+                  from a smaller company to a multi-billion dollar, complex
+                  organization. For me, the executive team and many others across
+                  the company Jocelyn’s knowledge, instincts, and experience have
+                  been invaluable.”
+                </blockquote>
+                <figcaption class="source">
+                  — Scott Kriens, Chairman and former CEO and President Juniper
+                  Networks
+                </figcaption>
+              </div>
+
+              <div class="divBlock">
+                <blockquote class="blockquote">
+                  “At Juniper the culture is a major reason for our success and why
+                  many people say it is the best place they have ever worked.
+                  Jocelyn Kung has been a major factor over many years in making
+                  this possible. Her contributions have been vast and far-reaching
+                  in the successful evolution of our people and practices as we grew
+                  from a smaller company to a multi-billion dollar, complex
+                  organization. For me, the executive team and many others across
+                  the company Jocelyn’s knowledge, instincts, and experience have
+                  been invaluable.”
+                </blockquote>
+                <figcaption class="source">
+                  — Scott Kriens, Chairman and former CEO and President Juniper
+                  Networks
+                </figcaption>
+              </div>
+            </div>
+
           </div>
 
-          <div class="divBlock">
-            <blockquote class="blockquote">
-              “At Juniper the culture is a major reason for our success and why
-              many people say it is the best place they have ever worked.
-              Jocelyn Kung has been a major factor over many years in making
-              this possible. Her contributions have been vast and far-reaching
-              in the successful evolution of our people and practices as we grew
-              from a smaller company to a multi-billion dollar, complex
-              organization. For me, the executive team and many others across
-              the company Jocelyn’s knowledge, instincts, and experience have
-              been invaluable.”
-            </blockquote>
-            <figcaption class="source">
-              — Scott Kriens, Chairman and former CEO and President Juniper
-              Networks
-            </figcaption>
-          </div>
-        </div>
-
-        <div class="c-dividerBlock half">
-          <div class="divBlock">
-            <blockquote class="blockquote">
-              “Jocelyn is magical. Her ability to transform organizations and
-              their leaders to achieve extra ordinary accomplishments is a
-              competitive weapon that has allowed me to grow both personally and
-              professionally. Jocelyn’s leadership and passion around
-              organizational development and personal growth are what makes her
-              so special. She has no peers!”
-            </blockquote>
-            <figcaption class="source">
-              — HAYWOOD J. TALCOVE, CEO LEXISNEXIS SPECIAL SERVICES INC.
-            </figcaption>
-          </div>
-
-          <div class="divBlock">
-            <blockquote class="blockquote">
-              “Jocelyn came to Addepar at a time of great organizational
-              challenge. Within a few months she dramatically changed the
-              dynamic of the leadership team, creating an environment of trust,
-              problem solving and positivity. Jocelyn helped launch Addepar on a
-              journey of true discovery and growth through self-awareness and
-              improved communication. ”
-            </blockquote>
-            <figcaption class="source">
-              — DAN BOOKSTABER, COO ADDEPAR
-            </figcaption>
-          </div>
-        </div>
-
+      </div>
       </div>
     </div>
     <!-- ****** Info Block End ******* -->
@@ -158,19 +209,17 @@
     <div class="c-bodyContainer">
       <div class="row justify-content-center">
         <div class="col-md-10 col-sm-12">
-          <div class="row c-imageRow">
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
-            <div class="imgItem col-md-3 col-6"><img src="./images/Equinix.png" alt="" /></div>
+          <div class="c-imageRow">
+            <div class="imgItem"><img src="https://images.squarespace-cdn.com/content/v1/583537ddbebafb4b23f2fb7e/1486069389829-ESZIWXVGWRS1SLBXF97A/ke17ZwdGBToddI8pDm48kCIjEvdtST6sGe2B1cyWF9lZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpxYiWgJwtuuK2FSKh5toInfGh7LM50EsRidcp67r0t0-867ACKZFHSoiyfKnUt_C90/Adobe.png?format=500w" alt="" loading="lazy" /></div>
+            <div class="imgItem"><img src="https://images.squarespace-cdn.com/content/v1/583537ddbebafb4b23f2fb7e/1486069306538-WZT7HQEZJIM2VSDLSTM8/ke17ZwdGBToddI8pDm48kCIjEvdtST6sGe2B1cyWF9lZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpxYiWgJwtuuK2FSKh5toInfGh7LM50EsRidcp67r0t0-867ACKZFHSoiyfKnUt_C90/Juniper.png?format=500w" alt="" loading="lazy" /></div>
+            <div class="imgItem"><img src="https://images.squarespace-cdn.com/content/v1/583537ddbebafb4b23f2fb7e/1486069326407-8FJM5P9HTM29K3LNHWHU/ke17ZwdGBToddI8pDm48kCIjEvdtST6sGe2B1cyWF9lZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpxYiWgJwtuuK2FSKh5toInfGh7LM50EsRidcp67r0t0-867ACKZFHSoiyfKnUt_C90/Equinix.png?format=500w" alt="" loading="lazy" /></div>
+            <div class="imgItem"><img src="https://images.squarespace-cdn.com/content/v1/583537ddbebafb4b23f2fb7e/1486069285122-THTBOHSW0URD34SQH1IL/ke17ZwdGBToddI8pDm48kCIjEvdtST6sGe2B1cyWF9lZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpxYiWgJwtuuK2FSKh5toInfGh7LM50EsRidcp67r0t0-867ACKZFHSoiyfKnUt_C90/Gentech.png?format=500w" alt="" loading="lazy" /></div>
+            <div class="imgItem"><img src="https://images.squarespace-cdn.com/content/v1/583537ddbebafb4b23f2fb7e/1486081488626-Z3MQGO9KY1LZKHMQDP1F/ke17ZwdGBToddI8pDm48kCIjEvdtST6sGe2B1cyWF9lZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpxYiWgJwtuuK2FSKh5toInfGh7LM50EsRidcp67r0t0-867ACKZFHSoiyfKnUt_C90/cisco.png?format=500w" alt="" loading="lazy" /></div>
+            <div class="imgItem"><img src="https://images.squarespace-cdn.com/content/v1/583537ddbebafb4b23f2fb7e/1486081595153-C62T18B6042P0J7LPUNG/ke17ZwdGBToddI8pDm48kCIjEvdtST6sGe2B1cyWF9lZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpxYiWgJwtuuK2FSKh5toInfGh7LM50EsRidcp67r0t0-867ACKZFHSoiyfKnUt_C90/oracle.png?format=500w" alt="" loading="lazy" /></div>
+            <div class="imgItem"><img src="https://images.squarespace-cdn.com/content/v1/583537ddbebafb4b23f2fb7e/1486081595148-LC9AET403UL9FZVQP8ZP/ke17ZwdGBToddI8pDm48kCIjEvdtST6sGe2B1cyWF9lZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpxYiWgJwtuuK2FSKh5toInfGh7LM50EsRidcp67r0t0-867ACKZFHSoiyfKnUt_C90/apple.png?format=500w" alt="" loading="lazy" /></div>
+            <div class="imgItem"><img src="https://images.squarespace-cdn.com/content/v1/583537ddbebafb4b23f2fb7e/1486081871411-Y2O0NO0SGGQ2ZMP5B71S/ke17ZwdGBToddI8pDm48kCIjEvdtST6sGe2B1cyWF9lZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpxYiWgJwtuuK2FSKh5toInfGh7LM50EsRidcp67r0t0-867ACKZFHSoiyfKnUt_C90/microsoft.png?format=500w" alt="" loading="lazy" /></div>
+            <div class="imgItem"><img src="https://images.squarespace-cdn.com/content/v1/583537ddbebafb4b23f2fb7e/1486082016289-HPFNDYGU2SU3Q3OFF40Y/ke17ZwdGBToddI8pDm48kCIjEvdtST6sGe2B1cyWF9lZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpxYiWgJwtuuK2FSKh5toInfGh7LM50EsRidcp67r0t0-867ACKZFHSoiyfKnUt_C90/Lexis.png?format=750w" alt="" loading="lazy" /></div>
+            <div class="imgItem"><img src="https://images.squarespace-cdn.com/content/v1/583537ddbebafb4b23f2fb7e/1486082064137-IAHUSFTHZF227J7L6HAJ/ke17ZwdGBToddI8pDm48kCIjEvdtST6sGe2B1cyWF9lZw-zPPgdn4jUwVcJE1ZvWQUxwkmyExglNqGp0IvTJZUJFbgE-7XRK3dMEBRBhUpxYiWgJwtuuK2FSKh5toInfGh7LM50EsRidcp67r0t0-867ACKZFHSoiyfKnUt_C90/nxp.png?format=750w" alt="" loading="lazy" /></div>
           </div>
         </div>
       </div>
