--- a/leadership.html
+++ b/leadership.html
@@ -70,11 +70,11 @@
     <!-- ****** Info Block ******* -->
     <div class="c-bodyContainer">
 
-      <div class="row justify-content-center m34-btm">
+      <div class="row justify-content-center m17-btm">
         <div class="col-md-6 col-sm-12">
 
           <!-- ***** Form Section ***** -->
-          <span class="infoStaticText italic">“Inspiration is the true currency of leadership.
+          <span class="infoStaticText italic pad1em-tb">“Inspiration is the true currency of leadership.
             It invites others on a journey to a place bigger than themselves.”</span>
           <!-- ***** Form Section End ***** -->
           </div>
@@ -86,7 +86,7 @@
 
           <!-- ***** Info Section ***** -->
           <div class="infoBlock">
-            <h2 class="sectHeading sm text-left">GET IN TOUCH</h2>
+            <h2 class="sectHeading sm text-left">A PROCESS OF AWAKENING</h2>
             <span class="infoStaticText dark">Leadership is a privilege. It is the opportunity to improve the quality of life for others while achieving enterprise goals. Seizing that opportunity is not always a conscious choice people make when they step into leadership positions. It can sneak up on people while busy using their expertise to set goals, plan, and solve the hard problems required to achieve results.</span>
             <span class="infoStaticText dark">At its best, the leadership journey is a process of awakening.  Great leaders are grounded in knowledge of their deeply held beliefs, values, strengths and weaknesses. Being anchored in their interior landscape provides a true north, the compass needed to set direction and lead others through ambiguity and change. Great leaders are genuinely interested in who the other person is, and how to bring out the best in each individual.</span>
           </div>
